--- a/Implementação/vis_project/vis_treemap/templates/vis_treemap/base.html
+++ b/Implementação/vis_project/vis_treemap/templates/vis_treemap/base.html
@@ -34,7 +34,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="inicio" class="nav-text-color navbar-brand">Explorando o Media Cloud Brasil </a>
+                <a href="inicio" class="nav-text-color navbar-brand"><img class="logo" src="{% static 'images/logo_fgv.png' %}" >Explorando o Media Cloud Brasil </a>
 
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
