--- a/Implementação/vis_project/vis_treemap/templates/vis_treemap/home.html
+++ b/Implementação/vis_project/vis_treemap/templates/vis_treemap/home.html
@@ -4,10 +4,10 @@
 
 
 <!-- container: Inserir palavra-chave  -->
-{% include "vis_treemap/keywords.html" %}
+{% include "vis_treemap/insert_keywords.html" %}
 
-<!-- container: d3vis  -->
-{% include "vis_treemap/treemap.html" %}
+<!-- container: main  -->
+{% include "vis_treemap/main.html" %}
 
 
 {% endblock %}
