--- a/Implementação/vis_project/vis_treemap/templates/vis_treemap/period.html
+++ b/Implementação/vis_project/vis_treemap/templates/vis_treemap/period.html
@@ -1,47 +1,72 @@
-<div class="container">
-  <div class="row">
-      <div class="col-md-12 text-center">
-        <form class="form" role="form">
-          <div class="form-group">
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Janeiro
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Fevereiro
-        </label>
-        <label class="checkbox-inline-month">
-          <input type="checkbox"> Março
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Abril
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Maio
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Junho
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Julho
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Agosto
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Setembro
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Outubro
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Novembro
-        </label>
-        <label class="checkbox-inline-month">
-            <input type="checkbox"> Dezembro
-        </label>
-        </div>
-      </form>
-      </div>
-    </div>
-      <!-- /.row -->
-    </div>
+<ul class="nav navbar-stacked">
+
+  <form class="form" role="form">
+    <div class="col-md-12 form-group">
+      <label class="col-md-12 list-label">
+          Mês:
+      </label>
+        <li>
+
+      <label name="janeiro" for="checkbox1" class="col-md-12">
+            <input id="checkbox1" type="checkbox" class="checkbox pull-right" checked="checked"> Janeiro
+            </label>
+
+            <label name="fevereiro" for="checkbox2" class="col-md-12">
+                <input id="checkbox2" type="checkbox" class="checkbox pull-right"> Fevereiro
+            </label>
+            <label name="março" for="checkbox3" class="col-md-12">
+              <input id="checkbox3" type="checkbox" class="checkbox pull-right"> Março
+            </label>
+            <label name="abril" for="checkbox4" class="col-md-12">
+                <input id="checkbox4" type="checkbox" class="checkbox pull-right"> Abril
+            </label>
+            <label name="maio"  for="checkbox5" class="col-md-12">
+                <input id="checkbox5" type="checkbox" class="checkbox pull-right"> Maio
+            </label>
+            <label name="junho"  for="checkbox6" class="col-md-12">
+                <input id="checkbox6" type="checkbox" class="checkbox pull-right"> Junho
+            </label>
+            <label name="julho"  for="checkbox7" class="col-md-12">
+                <input id="checkbox7" type="checkbox" class="checkbox pull-right"> Julho
+            </label>
+            <label name="agosto"  for="checkbox8" class="col-md-12">
+                <input id="checkbox8" type="checkbox" class="checkbox pull-right"> Agosto
+            </label>
+            <label name="setembro"  for="checkbox9" class="col-md-12">
+                <input id="checkbox9" type="checkbox" class="checkbox pull-right"> Setembro
+            </label>
+            <label name="outubro"  for="checkbox10" class="col-md-12">
+                <input id="checkbox10" type="checkbox" class="checkbox pull-right"> Outubro
+            </label>
+            <label name="novembro"  for="checkbox11" class="col-md-12">
+                <input id="checkbox11" type="checkbox" class="checkbox pull-right"> Novembro
+            </label>
+            <label name="dezembro"  for="checkbox12" class="col-md-12">
+                <input id="checkbox12" type="checkbox" class="checkbox pull-right"> Dezembro
+            </label>
+                  </li>
+                  <label class="col-md-12 list-label">
+                      Ano:
+                  </label>
+                  <li>
+
+                <label name="ano2015" for="checkbox13" class="col-md-12">
+                      <input id="checkbox13" type="checkbox" class="checkbox pull-right" checked="checked"> 2015
+                      </label>
+
+                      <label name="ano2014" for="checkbox14" class="col-md-12">
+                          <input id="checkbox14" type="checkbox" class="checkbox pull-right"> 2014
+                      </label>
+                      <label name="ano2013" for="checkbox15" class="col-md-12">
+                        <input id="checkbox15" type="checkbox" class="checkbox pull-right"> 2013
+                      </label>
+                      <label name="ano2012" for="checkbox16" class="col-md-12">
+                        <input id="checkbox16" type="checkbox" class="checkbox pull-right"> 2012
+                      </label>
+            </li>
+          </div>
+        </form>
+        </li>
+
+
+</ul>
