--- a/Implementação/vis_project/vis_treemap/templates/vis_treemap/sources.html
+++ b/Implementação/vis_project/vis_treemap/templates/vis_treemap/sources.html
@@ -1,26 +1,25 @@
-<div class="container">
-    <div class="row">
+<ul class="nav nav-pills">
+  <form class="form" role="form">
+    <div class="form-group">
+<li>
 
-      <div class="col-md-12 text-center">
-        <form class="form" role="form">
-          <div class="form-group">
-          <label class=" checkbox-inline checkbox-inline-red">
-                    <input type="checkbox"> O Globo
-          </label>
-                <label class="checkbox-inline checkbox-inline-green">
-                    <input type="checkbox"> Folha S. Paulo
-                </label>
-                <label class=" checkbox-inline checkbox-inline-blue">
-                    <input type="checkbox"> Estadao
-                </label>
-                <label class="checkbox-inline checkbox-inline-purple">
-                    <input type="checkbox"> Fonte 4
-                </label>
-                <label class="checkbox-inline checkbox-inline-yellow">
-                    <input type="checkbox"> Fonte 5
-                </label>
-              </div>
-            </form>
-            </div>
-      </div>
-    </div>
+      <label class=" col-md-12  checkbox-inline checkbox-inline-red  ">
+                <input type="checkbox"> O Globo
+      </label>
+            <label class="col-md-12 checkbox-inline checkbox-inline-green">
+                <input type="checkbox"> Folha S. Paulo
+            </label>
+            <label class="col-md-12 checkbox-inline checkbox-inline-blue">
+                <input type="checkbox"> Estadao
+            </label>
+            <label class="col-md-12 checkbox-inline checkbox-inline-purple">
+                <input type="checkbox"> Fonte 4
+            </label>
+            <label class="col-md-12 checkbox-inline checkbox-inline-yellow">
+                <input type="checkbox"> Fonte 5
+            </label>
+
+ </li>
+</div>
+</form>
+</ul>
