--- a/Implementação/vis_project/static/css/custom.css
+++ b/Implementação/vis_project/static/css/custom.css
@@ -14,7 +14,7 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 40px;
-  background-color: #f1f1eb;
+  background-color: #e2e2d8;
 }
   body > .container {
     padding: 0px 10px 0;
@@ -87,7 +87,7 @@ body {
      cursor: pointer;
  }
   .navbar-fixed-top{
-      background-color: #f1f1eb;
+      background-color: #e2e2d8;
       padding: 10px 40px 5px 40px;
 
   }
