--- a/Implementação/vis_project/vis_treemap/templates/vis_treemap/homep.html
+++ b/Implementação/vis_project/vis_treemap/templates/vis_treemap/homep.html
@@ -9,11 +9,13 @@
 {% include "vis_treemap/insert_keywords.html" %}
 
 <!-- container: main  -->
-{% include "vis_treemap/main.html" %}
+{% include "vis_treemap/mainp.html" %}
 
 
 {% endblock %}
 
 {% block treemap %}
-<script src="{% static 'js/myd3treemap.js' %}"></script>
+
+<script src="{% static 'js/myd3treemapp.js' %}"></script>
+
 {% endblock%}
