--- a/Implementação/vis_project/vis_treemap/templates/vis_treemap/keywords.html
+++ b/Implementação/vis_project/vis_treemap/templates/vis_treemap/keywords.html
@@ -3,7 +3,7 @@
     <div class="form-group">
   <li>
   {% for keyword in keywords %}
-  <button type="submit" class="btn btn-default" name="remove_keyword" value="{{keyword}}" >
+  <button type="submit" class="btn btn-default" name="removedKeyword" value="{{keyword}}" >
     <span class="glyphicon glyphicon-remove"></span>
           {{keyword}}
   </button>
