--- a/Implementação/vis_project/vis_treemap/templates/vis_treemap/mainp.html
+++ b/Implementação/vis_project/vis_treemap/templates/vis_treemap/mainp.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row-fluid">
 
-          <div class="col-lg-2 col-md-2 sidebar blog-sidebar">
+          <div class="col-md-2 col-lg-2 sidebar blog-sidebar">
               <div class="sidebar-item-period categories">
 
                   <h4>Período</h4>
@@ -10,15 +10,16 @@
                 </div>
           </div>
 
-          <div class="col-lg-8 col-md-8 text-center">
-              <div class="vis" id="d3vis">
-              </div>
-              <a id ="label1" name="onlykeywords"  class="text-center u" href="iniciop">
-                 Comparar apenas por palavras-chave</a>
+          <div class="col-md-8 col-lg-8 text-center">
+              <div class="vis" id="d3visp"></div>
+              <a id ="label2" name="sourceandkeywords"  class="text-center u" href="inicio">
+                 Comparar palavras-chave por fonte
+              </a>
+
 
           </div>
 
-          <div class="col-lg-2 col-md-2 sidebar blog-sidebar">
+          <div class="col-md-2 col-lg-2 sidebar blog-sidebar">
             <div class=" sidebar-item tag-cloud">
 
                 <h4>Fontes</h4>
