--- a/Implementação/vis_project/vis_treemap/templates/vis_treemap/sources.html
+++ b/Implementação/vis_project/vis_treemap/templates/vis_treemap/sources.html
@@ -3,22 +3,21 @@
     <div class="form-group">
 <li>
 
-      <label class=" col-md-12  checkbox-inline checkbox-inline-red  ">
-                <input type="checkbox"> O Globo
-      </label>
-            <label class="col-md-12 checkbox-inline checkbox-inline-green">
-                <input type="checkbox"> Folha S. Paulo
+            <label class=" col-md-12  col-lg-12 checkbox-inline checkbox-inline-red " for="scheckbox1">
+                <input type="checkbox" name="source" id="oglobo"> O Globo
+              </label>
+            <label class="col-md-12 col-lg-12 checkbox-inline checkbox-inline-green" for="scheckbox2">
+                <input type="checkbox" name="source" id="folha"> Folha S. Paulo
             </label>
-            <label class="col-md-12 checkbox-inline checkbox-inline-blue">
-                <input type="checkbox"> Estadao
+            <label class="col-md-12 col-lg-12 checkbox-inline checkbox-inline-blue" for="scheckbox3">
+                <input type="checkbox" name="source" id="estadao"> Estadao
             </label>
-            <label class="col-md-12 checkbox-inline checkbox-inline-purple">
-                <input type="checkbox"> Fonte 4
+            <label class="col-md-12 col-lg-12 checkbox-inline checkbox-inline-purple" for="scheckbox4">
+                <input type="checkbox" name="source" id="g1"> G1
             </label>
-            <label class="col-md-12 checkbox-inline checkbox-inline-yellow">
-                <input type="checkbox"> Fonte 5
+            <label class="col-md-12 col-lg-12 checkbox-inline checkbox-inline-yellow" for="scheckbox5">
+                <input type="checkbox" name="source" id="cartacapital"> Carta Capital
             </label>
-
  </li>
 </div>
 </form>
