--- a/Implementação/vis_project/vis_treemap/templates/vis_treemap/base.html
+++ b/Implementação/vis_project/vis_treemap/templates/vis_treemap/base.html
@@ -10,10 +10,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+
     <title>Explorando o Media Cloud Brasil</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
 
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <script type="text/javascript"  src="{% static 'js/d3/d3.v3.js' %}"></script>
@@ -61,7 +63,7 @@
 
     <div class="container-fluid">
             <div class="row-fluid">
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 col-lg-12 text-center">
                   <p class="lead">{{subtitulo}}</p>
                 </div>
             </div>
@@ -89,13 +91,18 @@
 
     <!-- jQuery Version 1.11.1 -->
     <script src="{% static 'js/jquery.js' %}"></script>
+     <script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.0/jquery.cookie.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
 
-    <script src="{% static 'js/myd3treemap.js' %}"></script>
+    {% block treemap %}
 
+
+    {% endblock%}
+
+    <script src="{% static 'js/click.js' %}"></script>
 
 
 
